--- a/YOUTHISNOW 1.html
+++ b/YOUTHISNOW 1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play YOUTHISNOW 1.</tw-noscript></noscript></tw-story>
-<tw-storydata name="YOUTHISNOW 1" startnode="1" creator="Twine" creator-version="2.9.2" format="Harlowe" format-version="3.3.9" ifid="94980ff9-2666-4c36-ad26-ae971f61b8a5" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+<tw-storydata name="YOUTHISNOW 1" startnode="1" creator="Twine" creator-version="2.9.2" format="Harlowe" format-version="3.3.9" ifid="94980ff9-2666-4c36-ad26-ae971f61b8a5" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import url('https://use.typekit.net/uay0xwi.css');
 img {
   display: block;
@@ -48,7 +48,7 @@ html, body {
 }
 
 body {
-  position: relative; 
+  position: relative; /* Ensure the body can contain the pseudo-element */
   margin: 0;
   padding: 0;
   overflow: hidden;
